# LBEmulator

./: README.md  pyproject.toml
code/: assemble_files.py  crow_halo.py  crow_lagfields.py  crow_matter.py  crow_matter2.py  crow_spectra2.py  crow_weights.py  crowfitbias.py  cscript-halo.sb  cscript-matter.sb  emulator_components.py  example.py  example_cfastpm.py  example_cfastpm_halopk.py  example_cfastpm_phm.py  example_galaxy_pk.py  fitbias.py  generate_spectra.py  getbiasparams.py  high_enough_k.py  hod.py  hodgal.py  kscript-lagfields.sb  kscript-weights.sb  make_galaxy_pk.py  mw_calc_pk.py  newhodgal.py  robust_avg.py  some_components.py  tools.py
data/: details.txt  galpk_9200-10000-1536-2048-gal.txt  galpk_9200-5000-1536-2048-gal.txt  galpk_9201-10000-1536-2048-gal.txt  galpk_9201-5000-1536-2048-gal.txt  galpk_9202-10000-1536-2048-gal.txt  galpk_9203-10000-1536-2048-gal.txt  galpk_9203-5000-1536-2048-gal.txt  galpk_9204-10000-1536-2048-gal.txt  galpk_9204-5000-1536-2048-gal.txt  galpk_9205-10000-1536-2048-gal.txt  galpk_9205-5000-1536-2048-gal.txt  galpk_9206-10000-1536-2048-gal.txt  galpk_9206-5000-1536-2048-gal.txt  galpk_9207-10000-1536-2048-gal.txt  galpk_9207-5000-1536-2048-gal.txt  galpk_9208-10000-1536-2048-gal.txt  galpk_9208-5000-1536-2048-gal.txt  galpk_9209-10000-1536-2048-gal.txt  galpk_9209-5000-1536-2048-gal.txt  ics_params.ini  massfunc_aa_0.2500_12_15.5_50.txt  massfunc_aa_0.3333_12_15.5_50.txt  massfunc_aa_0.4000_12_15.5_50.txt  massfunc_aa_0.5000_12_15.5_50.txt  massfunc_aa_0.6667_12_15.5_50.txt  massfunc_aa_1.0000_12_15.5_50.txt  (+262 more)
(+60 files in other folders)
