[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LBEmulator"
version = "0.0.1"
description = "Emulator for halo power spectrum based on lagrangian bias model and numerical simulations."
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
packages = ["LBEmulator"]
